# robot_pose_detect

./: .gitignore  README.md  compute_mean_std.py  relation_data.txt  rpe.py  rpe_angle.py  rpe_angle_train.py  rpe_joint.py  rpe_joint_train.py  target_data_generate.py  train_data_generate.py
robot_data_proc/: rpe.py  rpe_angle.py  target_data_generate.py  train_data_generate.py
ros_XB6/devel/: .catkin  .rosinstall  _setup_util.py
ros_XB6/devel/include/image_proc/: CropDecimateConfig.h  DebayerConfig.h  RectifyConfig.h  ResizeConfig.h
ros_XB6/devel/include/image_view/: ImageViewConfig.h
ros_XB6/devel/include/stereo_image_proc/: DisparityConfig.h
ros_XB6/devel/lib/XB6_description/: camera1_image_saver  hello  joint_state_simulator  jointstate_test
ros_XB6/devel/lib/XB6_gazebo/: camera1_depth_image_saver  camera1_image_saver  camera1_rgb_image_saver  camera2_depth_image_saver  camera2_image_saver  camera2_rgb_image_saver  camera3_depth_image_saver  camera3_image_saver  camera3_rgb_image_saver  joint1_controller_cmd_publisher  joint2_controller_cmd_publisher  joint3_controller_cmd_publisher  joint4_controller_cmd_publisher  joint5_controller_cmd_publisher  joint6_controller_cmd_publisher  joint_state_saver  joints_controller_cmd_publisher  jointstate_gazebo  link_state_saver
ros_XB6/devel/lib/image_proc/: image_proc
ros_XB6/devel/lib/image_publisher/: image_publisher
ros_XB6/devel/lib/image_rotate/: image_rotate
ros_XB6/devel/lib/image_view/: camera1_image_saver  disparity_view  extract_images  image_saver  image_view  video_recorder
ros_XB6/devel/lib/pkgconfig/: XB6_control.pc  XB6_description.pc  XB6_gazebo.pc  camera_calibration.pc  depth_image_proc.pc  image_proc.pc  image_publisher.pc  image_rotate.pc  image_view.pc  rviz_eval_panel.pc  stereo_image_proc.pc
ros_XB6/devel/lib/stereo_image_proc/: stereo_image_proc
ros_XB6/src/XB6_control/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
ros_XB6/src/XB6_control/config/: XB6_control.yaml
ros_XB6/src/XB6_control/launch/: XB6_control.launch
ros_XB6/src/XB6_description/: CMakeLists.txt  package.xml~
ros_XB6/src/XB6_description/launch/: XB6.rviz  direct_teach.launch  test.launch
ros_XB6/src/XB6_description/meshes/: hokuyo.dae
ros_XB6/src/XB6_description/meshes/collision/: XB06各关节参数.docx  XB6_base.stl  XB6_link2.stl  XB6_link3.stl  XB6_link6.stl
ros_XB6/src/XB6_description/meshes/collision (copy)/: link_1.stl  link_2.stl  link_3.stl  link_4.stl  link_6.stl  相对坐标系原点在绝对坐标系中的坐标.xlsx
ros_XB6/src/XB6_description/meshes/visual/: XB6_link1.stl  XB6_link4.stl  XB6_link5.stl
ros_XB6/src/XB6_description/meshes/visual (copy)/: base_link.stl  link_4.stl  link_5.stl
ros_XB6/src/XB6_description/src/: joint_state_simulator.cpp
ros_XB6/src/XB6_description/urdf/: XB6.gazebo  XB6.urdf  XB6.xacro  XB6.xacro~
ros_XB6/src/XB6_gazebo/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
ros_XB6/src/XB6_gazebo/launch/: XB6_gazebo.launch
ros_XB6/src/XB6_gazebo/src/: camera1_depth_image_saver.cpp  camera1_rgb_image_saver.cpp  camera2_depth_image_saver.cpp  camera2_rgb_image_saver.cpp  camera3_depth_image_saver.cpp  camera3_rgb_image_saver.cpp  joint_state_saver.cpp  joints_controller_cmd_publisher.cpp  link_state_saver.cpp
ros_XB6/src/XB6_gazebo/worlds/: XB6.world
ros_XB6/src/detect_jointstate/: mainpage.dox  manifest.xml
ros_XB6/src/rviz_eval_panel/: CMakeLists.txt  package.xml  plugin_description.xml
ros_XB6/src/rviz_eval_panel/src/: eval_joint_state_panel.cpp  eval_joint_state_panel.h
(+21 files in other folders)
